--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
   </head>
   <body>
     <header>
-      <h1>Rick Cerf</h1>
-      <h2>Software Engineer</h2>
+      <a href="index.html">
+        <h1>Rick Cerf</h1>
+        <h2>Software Engineer</h2>
+      </a>
+      <nav>
+        <ul>
+          <li><a href="index.html">Portfolio</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contacts.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     <section>
       <p> Gallery will go here.</p>
