--- a/index.html
+++ b/index.html
@@ -21,7 +21,28 @@
     <section>
       <ul>
         <li>
-          <img src="img/numbers-01.jpg" alt="">
+          <a href="img.numbers-01.jpg">
+            <img src="img/numbers-01.jpg" alt="">
+            <p>Experimentation with color and texture.</p>
+          </a>
+        </li>
+        <li>
+          <a href="img.numbers-02.jpg">
+            <img src="img/numbers-02.jpg" alt="">
+            <p>Playing with blending modes in Photoshop.</p>
+          </a>
+        </li>
+        <li>
+          <a href="img.numbers-06.jpg">
+            <img src="img/numbers-06.jpg" alt="">
+            <p>Trying to create an 80's style of glows.</p>
+          </a>
+        </li>
+        <li>
+          <a href="img.numbers-12.jpg">
+            <img src="img/numbers-12.jpg" alt="">
+            <p>Create shapes using repetition.</p>
+          </a>
         </li>
       </ul>
     </section>
