--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       </ul>
     </section>
     <footer>
+      <a href="http://github.com/rcerf"><img src="img/github-wrap.png" alt="Github Logo"></a>
+      <a href="http://twitter.com/cerf"><img src="img/twitter-wrap.png" alt="Twitter Logo"></a>
+      <a href="http://facebook.com/rcerf"><img src="img/facebook-wrap.png" alt="Facebook Logo"></a>
       <p>&copy; 2014 Rick Cerf</p>
     </footer>
   </body>
