--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
+      <a href="index.html" id="logo">
         <h1>Rick Cerf</h1>
         <h2>Software Engineer</h2>
       </a>
@@ -20,39 +20,41 @@
         </ul>
       </nav>
     </header>
-    <section>
-      <ul>
-        <li>
-          <a href="img.numbers-01.jpg">
-            <img src="img/numbers-01.jpg" alt="">
-            <p>Experimentation with color and texture.</p>
-          </a>
-        </li>
-        <li>
-          <a href="img.numbers-02.jpg">
-            <img src="img/numbers-02.jpg" alt="">
-            <p>Playing with blending modes in Photoshop.</p>
-          </a>
-        </li>
-        <li>
-          <a href="img.numbers-06.jpg">
-            <img src="img/numbers-06.jpg" alt="">
-            <p>Trying to create an 80's style of glows.</p>
-          </a>
-        </li>
-        <li>
-          <a href="img.numbers-12.jpg">
-            <img src="img/numbers-12.jpg" alt="">
-            <p>Create shapes using repetition.</p>
-          </a>
-        </li>
-      </ul>
-    </section>
-    <footer>
-      <a href="http://github.com/rcerf"><img src="img/github-wrap.png" alt="Github Logo"></a>
-      <a href="http://twitter.com/cerf"><img src="img/twitter-wrap.png" alt="Twitter Logo"></a>
-      <a href="http://facebook.com/rcerf"><img src="img/facebook-wrap.png" alt="Facebook Logo"></a>
-      <p>&copy; 2014 Rick Cerf</p>
-    </footer>
-  </body>
+    <div id="wrapper">
+      <section>
+        <ul>
+          <li>
+            <a href="img.numbers-01.jpg">
+              <img src="img/numbers-01.jpg" alt="">
+              <p>Experimentation with color and texture.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img.numbers-02.jpg">
+              <img src="img/numbers-02.jpg" alt="">
+              <p>Playing with blending modes in Photoshop.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img.numbers-06.jpg">
+              <img src="img/numbers-06.jpg" alt="">
+              <p>Trying to create an 80's style of glows.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img.numbers-12.jpg">
+              <img src="img/numbers-12.jpg" alt="">
+              <p>Create shapes using repetition.</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <footer>
+        <a href="http://github.com/rcerf"><img src="img/github-wrap.png" alt="Github Logo"></a>
+        <a href="http://twitter.com/cerf"><img src="img/twitter-wrap.png" alt="Twitter Logo"></a>
+        <a href="http://facebook.com/rcerf"><img src="img/facebook-wrap.png" alt="Facebook Logo"></a>
+        <p>&copy; 2014 Rick Cerf</p>
+      </footer>
+      </div>
+    </body>
 </html>
